@@ -248,6 +248,14 @@ AC_DEFUN([ACVT_COMPWRAP],
 		esac
 	])
 
+	AS_IF([test x"$use_extern_otf" = "xno"],
+	[
+		VT_WRAPPER_CC_EXTRA_LINKER_FLAGS="$VT_WRAPPER_CC_EXTRA_LINKER_FLAGS -L${libdir}/otf1"
+		VT_WRAPPER_CXX_EXTRA_LINKER_FLAGS="$VT_WRAPPER_CXX_EXTRA_LINKER_FLAGS -L${libdir}/otf1"
+		VT_WRAPPER_FC_EXTRA_LINKER_FLAGS="$VT_WRAPPER_FC_EXTRA_LINKER_FLAGS -L${libdir}/otf1"
+		VT_WRAPPER_NVCC_EXTRA_LINKER_FLAGS="$VT_WRAPPER_NVCC_EXTRA_LINKER_FLAGS -L${libdir}/otf1"
+	])
+
 	AS_IF([test "$PLATFORM" = "macos"],
 	[
 		VT_WRAPPER_CC_EXTRA_LINKER_FLAGS="$VT_WRAPPER_CC_EXTRA_LINKER_FLAGS -Wl,-force_flat_namespace"
